# ffi_pipeline

./: Dockerfile  main.ipynb  notes.txt  pyproject.toml
scripts/: ec2_user_data.sh  push_image.sh
